<resources>
    <string name="app_name">Umirea</string>
    <string name="app_name_upper">UMIREA</string>
    <string name="auth">Авторизация</string>
    <string name="registration">Регистрация</string>
    <string name="title_activity_app">AppActivity</string>

    <string name="title_home">Главная</string>
    <string name="title_dashboard">Расписание</string>
    <string name="title_chat">Чат</string>
    <string name="title_info">Новости</string>
    <string name="title_cloud">Облако</string>
    <string name="title_account">Аккаунт</string>


    <string name="enter">Войти</string>
    <string name="verify">Получить код</string>
    <string name="reset_password">Восстановить пароль</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="mail">Логин</string>
    <string name="password">Пароль</string>
    <string name="code">Код</string>
    <string name="firstName">Имя</string>
    <string name="lastName">Фамилия</string>
    <string name="server_client_id">513930978985-ssveiamqf85mmb010kothj81qs125tkt.apps.googleusercontent.com</string>

    <string name="server_url">192.168.118.234</string>
    <string name="title_activity_authorization">AuthorizationActivity</string>
    <string name="title_notifications">Notifications</string>


    <string name="pasword_verification">Подтверждение пароля</string>
    <string name="password_reset_title">Восстановление пароля</string>
    <string name="group_settings">Настройка группы</string>
    <string name="delete_account">Удалить аккаунт</string>
    <string name="change_for_all"><u>Изменить для всех</u></string>
    <string name="change_for_me"><u>Изменить</u></string>

    <string name="user_full_name">%1$s %2$s</string>

    <string name="user_group">Группа - %1$s</string>
    <string name="user_role">Роль - %1$s</string>


    <string name="lesson_name">%1$s %2$s</string>
    <string name="user_login">Логин - %1$s</string>
    <string name="user_role_member">Студент</string>
    <string name="user_role_owner">Староста</string>
    <string name="upload_more">Загрузить ещё</string>
    <string name="create_folder">Создать папку</string>
    <string name="folder_name">Название папки</string>
    <string name="create">Создать</string>
    <string name="change_image">Изменить изображение</string>
    <string name="logout">Выйти из аккаунта</string>
    <string name="apply_schedule">Применить рассписание</string>
    <string name="join">Присоединиться</string>
    <string name="group_name">Название группы</string>
    <string name="group_token">Токен группы</string>
    <string name="create_group">Создать группу</string>
    <string name="member_settings">Настройки участников</string>
    <string name="group_schedule">Рассписание группы</string>
    <string name="group_member_count">Количество человек в группе</string>
    <string name="change_schedule">Изменить рассписание</string>
    <string name="manage_members">Управление участниками</string>
    <string name="apply">Применить</string>
    <string name="change_task">Изменить задание</string>
    <string name="create_info">Создать новость</string>
    <string name="name">Название</string>
    <string name="files">Файлы</string>
    <string name="all">Все</string>
    <string name="full">Полностью</string>
    <string name="next">Следующая</string>
    <string name="current">Сейчас</string>


</resources>