<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home_icon"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/dashboard_icon"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_chat"
        android:icon="@drawable/chat_icon"
        android:title="@string/title_chat" />

    <item
        android:id="@+id/navigation_cloud"
        android:icon="@drawable/file_icon"
        android:title="@string/title_cloud" />

    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/account_icon"
        android:title="@string/title_account" />


</menu>