<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/home_element"
    android:orientation="vertical"
    android:paddingHorizontal="40dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/create_folder"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/folder_name"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:background="@drawable/chat_field"
        android:ems="10"
        android:hint="@string/folder_name"
        android:inputType="none|text"
        android:maxLength="20"
        android:paddingHorizontal="7dp" />

    <Button
        android:id="@+id/create"
        style="@style/ColoredButton"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:paddingHorizontal="40dp"
        android:text="@string/create" />

    <androidx.legacy.widget.Space
        android:layout_width="match_parent"
        android:layout_height="40dp" />

</LinearLayout>