<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/midnight_express"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="124dp"
            android:layout_height="128dp"
            android:layout_marginBottom="10dp"
            app:srcCompat="@drawable/logo" />

        <LinearLayout
            android:id="@+id/text_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-medium"
                android:gravity="center"
                android:text="@string/app_name_upper"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/auth"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/input_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="20dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/upper_corners"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingStart="30dp"
            android:paddingEnd="10dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/email_icon" />

            <EditText
                android:id="@+id/loginText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@null"
                android:ems="9"
                android:hint="@string/mail"
                android:inputType="none|text"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black" />
        </LinearLayout>

        <android.widget.Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/lower_corners"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingStart="30dp"
            android:paddingEnd="10dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/password_icon" />

            <EditText
                android:id="@+id/password_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@null"
                android:ems="9"
                android:hint="@string/password"
                android:inputType="none|textPassword"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/enter_button"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:background="@drawable/gradient_button"
                android:text="@string/enter"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <Button
                android:id="@+id/reset_password"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:background="@drawable/gray_button"
                android:text="@string/reset_password"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <Button
                android:id="@+id/create_account"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:background="@drawable/gray_button"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>


    </LinearLayout>
</LinearLayout>