<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_home"
        android:name="edu.mirea.ardyc.umirea.ui.view.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_navigation_home_to_navigation_dashboard"
            app:destination="@id/navigation_dashboard" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_cloud"
            app:destination="@id/navigation_cloud"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"
            app:popUpTo="@id/navigation_home"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_info"
            app:destination="@id/navigation_info"
            app:popUpTo="@id/navigation_home"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="edu.mirea.ardyc.umirea.ui.view.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard">
        <action
            android:id="@+id/action_navigation_dashboard_to_navigation_home"
            app:destination="@id/navigation_home"
            app:popUpTo="@id/navigation_home"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_navigation_dashboard_to_navigation_chat"
            app:destination="@id/navigation_chat"
            app:popUpTo="@id/navigation_chat"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_navigation_dashboard_to_navigation_account"
            app:destination="@id/navigation_account"
            app:popUpTo="@id/navigation_account"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_navigation_dashboard_to_navigation_cloud"
            app:destination="@id/navigation_cloud"
            app:popUpTo="@id/navigation_cloud"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/navigation_chat"
        android:name="edu.mirea.ardyc.umirea.ui.view.chat.ChatFragment"
        android:label="@string/title_chat"
        tools:layout="@layout/fragment_chat" >
        <action
            android:id="@+id/action_navigation_chat_to_navigation_info"
            app:destination="@id/navigation_info"
            app:popUpTo="@id/navigation_chat"
            app:popUpToInclusive="false" />
        <action
            android:id="@+id/action_navigation_chat_to_navigation_dashboard"
            app:destination="@id/navigation_dashboard"
            app:popUpTo="@id/navigation_dashboard"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/navigation_info"
        android:name="edu.mirea.ardyc.umirea.ui.view.info.InfoFragment"
        android:label="@string/title_info"
        tools:layout="@layout/fragment_info" >
        <action
            android:id="@+id/action_navigation_info_to_navigation_chat"
            app:destination="@id/navigation_chat"
            app:popUpTo="@id/navigation_chat"
            app:popUpToInclusive="false" />
    </fragment>
    <fragment
        android:id="@+id/navigation_cloud"
        android:name="edu.mirea.ardyc.umirea.ui.view.cloud.CloudFragment"
        android:label="@string/title_cloud"
        tools:layout="@layout/fragment_cloud" >
        <action
            android:id="@+id/action_navigation_cloud_to_navigation_home"
            app:destination="@id/navigation_home"
            app:exitAnim="@android:anim/fade_out"
            app:popUpTo="@id/navigation_home"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_navigation_cloud_to_navigation_account"
            app:destination="@id/navigation_account"
            app:popUpTo="@id/navigation_account"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_navigation_cloud_to_navigation_chat"
            app:destination="@id/navigation_chat"
            app:popUpTo="@id/navigation_chat"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_navigation_cloud_to_navigation_dashboard"
            app:destination="@id/navigation_dashboard"
            app:popUpTo="@id/navigation_dashboard"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/navigation_account"
        android:name="edu.mirea.ardyc.umirea.ui.view.account.AccountFragment"
        android:label="@string/title_cloud"
        tools:layout="@layout/fragment_account" />


</navigation>