<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/midnight_express"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="95"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="172dp"
            android:layout_height="139dp"
            android:layout_marginBottom="10dp"
            app:srcCompat="@drawable/logo" />

        <LinearLayout
            android:id="@+id/text_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-medium"
                android:gravity="center"
                android:text="@string/app_name_upper"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/registration"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/input_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="50"
        android:alpha="1"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="20dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/upper_corners"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingStart="30dp"
            android:paddingEnd="10dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/email_icon" />

            <EditText
                android:id="@+id/loginText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@null"
                android:ems="11"
                android:hint="@string/mail"
                android:inputType="none|text"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/lower_corners"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingStart="30dp"
            android:paddingEnd="10dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/password_icon" />

            <EditText
                android:id="@+id/password_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@null"
                android:ems="11"
                android:hint="@string/password"
                android:inputType="none|text"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_white"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingStart="5dp"
            android:paddingEnd="10dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/news" />

            <EditText
                android:id="@+id/firstName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@null"
                android:ems="11"
                android:hint="@string/firstName"
                android:inputType="none|text"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="16sp" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_white"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingStart="5dp"
            android:paddingEnd="10dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/news" />

            <EditText
                android:id="@+id/lastName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@null"
                android:ems="11"
                android:hint="@string/lastName"
                android:inputType="none|text"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="16sp" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />


        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/verify"
                    android:layout_width="150dp"
                    android:layout_height="37dp"
                    android:background="@drawable/gradient_button"
                    android:text="@string/verify"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <Space
                    android:layout_width="5dp"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_white"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingStart="5dp"
                    android:paddingEnd="10dp">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginEnd="5dp"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/password_icon" />

                    <EditText
                        android:id="@+id/code"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:background="@null"
                        android:ems="11"
                        android:hint="@string/code"
                        android:inputType="none|text"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:textSize="16sp" />
                </LinearLayout>
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <Button
                android:id="@+id/enter_button"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:background="@drawable/gradient_button"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>


    </LinearLayout>
</LinearLayout>